assets/css/immersion.scss
---
---

/* CSS for A Docker Immersion */

$primary-color: #cc5c12;

body {
  font-family: 'Open Sans', sans-serif;
  padding-top: 70px;
}

footer {
  padding-top: 70px;
}

.navbar-inverse .navbar-brand,
.navbar-inverse .navbar-brand,
.navbar-inverse .navbar-nav>li>a,
.navbar-inverse .navbar-nav>li>a {
  color: #ffffff;
}

a:hover,
.navbar-inverse .navbar-brand:hover,
.navbar-inverse .navbar-brand:focus,
.navbar-inverse .navbar-nav>li>a:hover,
.navbar-inverse .navbar-nav>li>a:focus {
  color: $primary-color;
  text-decoration: none;
}

.navbar {
  font-family: 'Nunito', sans-serif;
  min-height: 70px;
}

.navbar-brand {
  font-size: 30px;
  line-height: 40px;
  height: 70px;
}

.navbar-nav {
  float: right;
  font-size: 18px;
  padding-top: 10px;
}

.start-text {
  font-family: 'Nunito', sans-serif;
  font-size: 5em;
  margin-top: 30px;
  margin-bottom: 40px;
}

.site-heading {
  color: #ffffff;
  background-color: #333333;
  font-family: 'Nunito', sans-serif;
  margin-top: -20px;
  padding-top: 50px;
  padding-bottom: 50px;
  margin-bottom: 40px;
}

.site-footer {
  font-size:1em;
  text-align:center;
  padding-bottom:10px;
}

.project-name {
  font-size:5.5em;
  color: $primary-color;
}
.lead {
  font-size: 2.5em;
}

h1, h2, h3, h4, h5, h6 {
  font-family: 'Nunito', sans-serif;
}

h1, h2 {
  margin-top: 30px;
  margin-bottom: 20px;
}

h1 {
  font-size: 48px;
}

pre {
  font-family: 'Source Code Pro', monospace;
}

.big{
  font-size:1.5em;
}

